removing npm references

--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "proxy": "http://localhost:5000/",
   "scripts": {
     "build-css": "node-sass src/ -o src/styles/generated/",
-    "watch-css": "npm run build-css && node-sass src/ -o src/styles/generated/ --watch --recursive",
+    "watch-css": "yarn run build-css && node-sass src/ -o src/styles/generated/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "build": "yarn run build-css && react-scripts build",
+    "test": "reacyarn-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
