--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "immutability-helper": "^2.1.2",
     "jquery": "^3.1.1",
+    "moment": "^2.17.1",
     "node-sass": "^4.5.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -21,8 +22,8 @@
   },
   "proxy": "https://shoots-staging.herokuapp.com",
   "scripts": {
-    "build-css": "node-sass src/ -o src/styles/generated/",
-    "watch-css": "yarn run build-css && node-sass src/ -o src/styles/generated/ --watch --recursive",
+    "build-css": "node-sass src/styles/sass -o src/styles/",
+    "watch-css": "yarn run build-css && node-sass src/styles/sass -o src/styles/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "yarn run build-css && react-scripts build",
